--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="main-program">
       <div class="main-program-title">
         <h3 class="main-program-h3">Main Program</h3>
-        <hr>
+        <hr class="hr">
       </div>
       <div class="activity">
         <img src="./img/mobile/guitar-solid.svg" alt="guitar" class="activity-img">
@@ -73,7 +73,7 @@
     <section class="featured-speakers">
       <div class="featured-speakers-div">    
         <h3 class="featured-speakers-h3">Members</h3>
-        <hr>
+        <hr class="hr">
       </div>  
       <div class="members">
         <div class="members-team">
