Finish Capstone Project

--- a/index.html
+++ b/index.html
@@ -98,72 +98,12 @@
         <button class="ticket">Get your Ticket Here</button>
       </div>
     </section>
-    <section class="featured-speakers">
+    <section class="featured-speakers" id="festival-members">
       <div class="featured-speakers-div">
         <h3 class="featured-speakers-h3">Members</h3>
         <hr class="hr">
       </div>
       <div class="members">
-        <div class="members-team">
-          <div class="members-img-div">
-            <img src="./img/mobile/gustavo-cerati.png" alt="Gustavo Cerati" class="members-img">
-          </div>
-          <div class="members-text">
-            <h4 class="members-h4">Gustavo Cerati</h4>
-            <h5 class="members-h5">Singer</h5>
-            <p class="members-p">Author from all of his songs, known all over the world, one of the greatest</p>
-          </div>
-        </div>
-        <div class="members-team">
-          <div class="members-img-div">
-            <img src="./img/mobile/gustavo-cerati.png" alt="Gustavo Cerati" class="members-img">
-          </div>
-          <div class="members-text">
-            <h4 class="members-h4">Zeta Bosio</h4>
-            <h5 class="members-h5">Guitar Player</h5>
-            <p class="members-p">The right hand of Gustavo in the stage. Born in San Fernando, Buenos Aires.</p>
-          </div>
-        </div>
-        <div class="members-team">
-          <div class="members-img-div">
-            <img src="./img/mobile/gustavo-cerati.png" alt="Gustavo Cerati" class="members-img">
-          </div>
-          <div class="members-text">
-            <h4 class="members-h4">Charly Alberti</h4>
-            <h5 class="members-h5">Singer</h5>
-            <p class="members-p">author from all of his songs, known all over the world, one of the greatest</p>
-          </div>
-        </div>
-        <div class="members-team">
-          <div class="members-img-div">
-            <img src="./img/mobile/gustavo-cerati.png" alt="Gustavo Cerati" class="members-img">
-          </div>
-          <div class="members-text">
-            <h4 class="members-h4">Charly Garcia</h4>
-            <h5 class="members-h5">Piano/Singer</h5>
-            <p class="members-p">author from all of his songs, known all over the world, one of the greatest</p>
-          </div>
-        </div>
-        <div class="members-team">
-          <div class="members-img-div">
-            <img src="./img/mobile/gustavo-cerati.png" alt="Gustavo Cerati" class="members-img">
-          </div>
-          <div class="members-text">
-            <h4 class="members-h4">Luis Alberto Spinnetta</h4>
-            <h5 class="members-h5">Guitar/Singer</h5>
-            <p class="members-p">author from all of his songs, known all over the world, one of the greatest</p>
-          </div>
-        </div>
-        <div class="members-team-hidden">
-          <div class="members-img-div">
-            <img src="./img/mobile/gustavo-cerati.png" alt="Gustavo Cerati" class="members-img">
-          </div>
-          <div class="members-text">
-            <h4 class="members-h4">Luis Alberto Spinnetta</h4>
-            <h5 class="members-h5">Guitar/Singer</h5>
-            <p class="members-p">author from all of his songs, known all over the world, one of the greatest</p>
-          </div>
-        </div>
       </div>
       <div class="button-div">
         <button class="more">More <img src="./img/mobile/chevron-down-solid.svg" alt="down-solid" class="down-solid-img"></button>
@@ -204,5 +144,6 @@
     </div>
   </footer>
   <script src="./js/menu.js"></script>
+  <script src="./js/deploy.js"></script>
 </body>
 </html>
